#384 - Remove ability to set/update Pre-Authorization flag from oxd
